[package]
name = "minijinja"
version = "0.1.1"
authors = [
  "OpenRouter <support@openrouter.ai>",  
  "Armin Ronacher <armin.ronacher@active-4.com>"
]
edition = "2021"
license = "MIT"
description = "A wasm wrapper for minijinja"
repository = "https://github.com/OpenRouterTeam/minijinja"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.91"
minijinja = { version = "2.0.3", features = ["loader", "json", "urlencode", "preserve_order", "unstable_machinery_serde"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
serde_json = "1.0.91"
serde-wasm-bindgen = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
